# gfxlib

./: .clang-format  .clang-tidy  CMakeLists.txt  include.txt  source.txt
examples/: main.cpp
include/: circle_shape.hpp  drawable.hpp  event.hpp  rect.hpp  rectangle_shape.hpp  render_states.hpp  transform.hpp  transformable.hpp  vector2.hpp  vertex_array.hpp  window.hpp
include/gfx/core/: circle_shape.hpp  color.hpp  drawable.hpp  event.hpp  font.hpp  keyboard.hpp  mouse.hpp  primitive_type.hpp  rect.hpp  rectangle_shape.hpp  text.hpp  transform.hpp  transformable.hpp  vector2.hpp  vector3.hpp  vertex.hpp  vertex_array.hpp  window.hpp
include/gfx/ui/: button.hpp  container_widget.hpp  event.hpp  renderer.hpp  scrollable_buttons_widget.hpp  scrollbar.hpp  text_field.hpp  widget.hpp  widget_container.hpp  window_manager.hpp
include/gfx_core/: circle_shape.hpp  color.hpp  font.hpp  mouse.hpp  primitive_type.hpp  rectangle_shape.hpp  text.hpp  transform.hpp  vector2.hpp  vertex.hpp  vertex_array.hpp  window.hpp
scripts/: run.sh
source/: main.cpp
source/gfx/core/sfml_impl/: circle_shape.cpp  font.cpp  keyboard.cpp  mouse.cpp  primitive_type.cpp  rectangle_shape.cpp  text.cpp  transform.cpp  transformable.cpp  vertex.cpp  vertex_array.cpp  window.cpp
source/gfx/ui/: button.cpp  event.cpp  renderer.cpp  scrollbar.cpp  widget.cpp  window_manager.cpp
source/sfml_impl/: circle_shape.cpp  font.cpp  mouse.cpp  primitive_type.cpp  rectangle_shape.cpp  sfml_window.cpp  text.cpp  transform.cpp  transformable.cpp  vertex.cpp  vertex_array.cpp  window.cpp
